[ADD]main: Adding react router dom and product detail component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -14,7 +14,7 @@ $brownish-grey: #666666;
 $brownish-grey-two: #5c5c5c;
 $brown-grey-three: #adadad;
 $light-blue-grey: #c4d4e3;
-$darkish-blue: #0040a8;
+$medium-blue: #3483fa;
 $main-product: #ffdb15;
 $gray93: #ededed;
 
