[UPD]productList: Add onFocus input text and active circle in card

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,6 +16,7 @@ $brown-grey-three: #adadad;
 $light-blue-grey: #c4d4e3;
 $medium-blue: #3483fa;
 $main-product: #ffdb15;
+$active-product: #00a650;
 $gray93: #ededed;
 
 /* breakpoints */
